--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <main class="main-container">
         <div class="main-display">
             <div class="main-display__desc">
-                <h1>Generate a random password</h1>
+                <h1>Generate a<br><span class="main-display__desc-txt-color">random password</span></h1>
                 <p>Never use an insecure password again.</p>
                 <button>Generate passwords</button>
             </div>
             <div class="main-display__password-block-container">
-                <div class="main-display__password-block-input"></div>
-                <div class="main-display__password-block-display"></div>
+                <input type="button" class="main-display__password-block-input"/>
+                <button class="main-display__password-block-password-display"></button>
             </div>
         </div>
     </main>
