--- a/index.html
+++ b/index.html
@@ -13,31 +13,14 @@
             <div class="main-display__desc">
                 <h1>Generate a<br><span class="main-display__desc-txt-color">random password</span></h1>
                 <p>Never use an insecure password again.</p>
-                <button>Generate passwords</button>
+                <button class="password-generator">Generate passwords</button>
             </div>
             <div class="main-display__password-block-container">
-                <input type="button" class="main-display__password-block-input"/>
+                <button  class="main-display__password-block-input"></button>
                 <button class="main-display__password-block-password-display"></button>
             </div>
         </div>
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 	<script src="main.js"></script>
   </body>
